# asdsystem

./: AGENTS.md  prompt.md  questions.md  验收报告4.md  验收报告5.md
fullstack/backend/: .dockerignore  .env.example  Dockerfile  celerybeat-schedule  manage.py  pyproject.toml
fullstack/backend/apps/accounts/: apps.py  bootstrap_defaults.py  models.py  services.py
fullstack/backend/apps/accounts/api/: auth_urls.py  serializers.py  urls.py  views.py
fullstack/backend/apps/accounts/migrations/: 0001_initial.py  0002_sync_notification_dispatch_permission.py  0003_sync_system_health_detail_permission.py
fullstack/backend/apps/accounts/tests/: test_auth_api.py  (+3 more)
fullstack/backend/apps/archives/: apps.py  models.py  services.py
fullstack/backend/apps/audit/: apps.py  models.py  services.py
fullstack/backend/apps/borrowing/: apps.py  models.py  services.py  tasks.py
fullstack/backend/apps/common/: exceptions.py  models.py  pagination.py  permissions.py  response.py
fullstack/backend/apps/destruction/: apps.py  models.py  services.py
fullstack/backend/apps/digitization/: apps.py  models.py  services.py  tasks.py
fullstack/backend/apps/notifications/: apps.py  models.py  services.py  tasks.py
fullstack/backend/apps/organizations/: models.py  services.py
fullstack/backend/apps/reports/: apps.py  services.py
fullstack/backend/apps/system/: apps.py  services.py
fullstack/backend/config/: celery.py  logging_config.py  settings.py  urls.py
fullstack/backend/scripts/: init_system.sh  start_backend.sh  start_beat.sh  start_worker.sh  wait_for_services.py
(+164 files in other folders)
